# GitHub-Audit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  check_2fa_required.py  check_branch_protections.py  checklist.md  extract_service_results.py  get_branch_protections.py  graph-1.mermaid  graph-2.mermaid  produce-report.sh  protection_report  pyproject.toml  report_branch_status.py  requirements-dev.txt  requirements.txt  show_all_terms  term_search.py  tox.ini
docs/: README.md  checklist.md  graph-1.mermaid  graph-2.mermaid  graph.md  threat.md
moz_scripts/: Makefile  README.rst  full_to_email  get_repos.sh  messages.yaml  open_issues.py  report-by-service  update_results
