[tool.poetry]
name = "github-audit"
version = "0.1.0"
description = "Audit Tools for Mozilla Guidance"
authors = ["Hal Wine <hwine@mozilla.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"
agithub = "^2.1"
tinydb = "^3.9"
PyYAML = "^3.12"
backoff = "^1.6"

[tool.poetry.dev-dependencies]
pudb = "^2018.1"

# Default from https://github.com/ambv/black/blob/master/pyproject.toml
[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
