[tool.poetry]
name = "github-audit"
version = "0.1.0"
description = "Audit Tools for Mozilla Guidance"
authors = ["Hal Wine <hwine@mozilla.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"
tinydb = "^3.9"
PyYAML = "^3.12"
backoff = "^1.6"
agithub = { git = "https://github.com/hwine/agithub.git", branch = "hwine_sleep_test" }

[tool.poetry.dev-dependencies]
pudb = "^2018.1"

# Default from https://github.com/ambv/black/blob/master/pyproject.toml
[tool.black]
line-length = 88
target-version = ['py36',]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
